# Drive-Sense

./: .gitignore  CMakeLists.txt  README.md  drivesense
data/: sample_trip.csv
docs/: index.html  script.js  styles.css
include/: analyzer.h  parser.h  trip_types.h
ios/DriveSensePhone/: README.md
ios/DriveSensePhone/DriveSensePhone/: Analyzer.swift  DriveSensePhoneApp.swift  Info.plist  Models.swift  RootView.swift  Services.swift
ios/DriveSensePhone/DriveSensePhone.xcodeproj/: project.pbxproj
ios/DriveSensePhone/DriveSensePhone.xcodeproj/project.xcworkspace/xcuserdata/harvardsummer.xcuserdatad/: UserInterfaceState.xcuserstate
ios/DriveSensePhone/DriveSensePhone.xcodeproj/xcuserdata/harvardsummer.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: analyzer.cpp  main.cpp  parser.cpp
